Fixed UI Issues